[package]
name = "rustventofcode"
version = "0.1.0"
authors = ["Alex Hortin <hortinstein@gmail.com>"]
edition = "2018"

[dependencies]
common = {path = "./src/lib/common"}
aoc_day1 = {path = "./src/lib/day_libs/aoc_day1"}
aoc_day2 = {path = "./src/lib/day_libs/aoc_day2"}
aoc_day3 = {path = "./src/lib/day_libs/aoc_day3"}

[workspace]
members = [
    "src/lib/day_libs/aoc_day1",
    "src/lib/day_libs/aoc_day2",
    "src/lib/day_libs/aoc_day3"
]